# teatui

./: AGENTS.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
examples/counter/: Cargo.toml
examples/counter/src/: main.rs
examples/tabs/: Cargo.toml
examples/tabs/src/: main.rs
examples/todo-list/: Cargo.toml
examples/todo-list/src/: main.rs  message.rs  model.rs  update.rs  view.rs
ratatui-elm/: Cargo.toml
ratatui-elm/src/: effects.rs  events.rs  lib.rs  update.rs  view.rs
src/: engine.rs  main.rs  model.rs  update.rs  view.rs
src/counter/: Cargo.toml
src/counter/src/: main.rs  model.rs
src/events/: actor.rs
src/framework/: Cargo.toml
src/framework/src/: effects.rs  events.rs  lib.rs  view.rs
src/update/: actor.rs  core.rs
src/view/: actor.rs  core.rs
teatui/: Cargo.toml
teatui/src/: effects.rs  events.rs  lib.rs  update.rs  view.rs
